--- a/oxford-buses/oxfordBuses/src/main/res/layout/stoplistactivity.xml
+++ b/oxford-buses/oxfordBuses/src/main/res/layout/stoplistactivity.xml
@@ -4,7 +4,7 @@
     android:id="@+id/stoplist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    class="uk.co.jakeclarke.oxfordbuses.StopListFragment"
+    class="com.samlanning.oxfordbuses.StopListFragment"
     tools:layout="@layout/stoplistitem" >
 
 </fragment>
