Add map to view dynamically (faster screen loading), and auto formatted code.

--- a/oxford-buses/oxfordBuses/src/main/res/layout/map.xml
+++ b/oxford-buses/oxfordBuses/src/main/res/layout/map.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/mainlayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainlayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context=".MainMapActivity" >
+    tools:context=".MainMapActivity">
 
-    <fragment
+    <!--<fragment
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.SupportMapFragment"
         map:cameraTargetLat="51.7511"
         map:cameraTargetLng="-1.2558"
-        map:cameraZoom="16" />
+        map:cameraZoom="16" />-->
+
+    <RelativeLayout
+        android:id="@+id/map_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </RelativeLayout>
