--- a/oxford-buses/oxfordBuses/src/main/res/layout-large-land/map.xml
+++ b/oxford-buses/oxfordBuses/src/main/res/layout-large-land/map.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/mainlayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainlayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:baselineAligned="false"
     android:orientation="horizontal"
-    tools:context=".MainMapActivity" 
-    android:baselineAligned="false">
+    tools:context=".MainMapActivity">
 
     <FrameLayout
         android:id="@+id/listframe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2" >
+        android:layout_weight="2">
 
     </FrameLayout>
 
-    <fragment
-        android:id="@+id/map"
+    <RelativeLayout
+        android:id="@+id/map_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        class="com.google.android.gms.maps.SupportMapFragment"
-        map:cameraTargetLat="51.7511"
-        map:cameraTargetLng="-1.2558"
-        map:cameraZoom="13" >
-        <requestFocus />
-        </fragment>
-        
-        
+        android:layout_weight="1">
+        <requestFocus/>
+    </RelativeLayout>
+
 
 </LinearLayout>
